# mcp-example

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
resources/: introduction.md
